tutorials/gke-dotnet-docker-ingress/SampleApplication/GKE/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-application-ingress
  namespace: sample-application-ns
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: sample-application-service
      port: 
        number: 80
